objects/PHSS_Program__c.object
<CustomObject>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Library_Name__c</fullName>
        <label>Content Library Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructor_Bulletin__c</fullName>
        <label>Instructor Bulletin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PHSS_Product_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PHSS Product Line</label>
        <referenceTo>PHSS_Product_Line__c</referenceTo>
        <relationshipLabel>PHSS Programs</relationshipLabel>
        <relationshipName>PHSS_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Long_Name__c</fullName>
        <label>Program Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PHSS Program</label>
    <nameField>
        <label>PHSS Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PHSS Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>